--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mapbox-studio-[nameofmap]",
+    "name": "mapbox-studio-highcontrast",
     "version": "1.0.0",
     "description": "Default style project for Mapbox Studio.",
     "main": "./package.json"
